some edit in display active project to expert

--- a/expert/templates/expert/layouts/comment.html
+++ b/expert/templates/expert/layouts/comment.html
@@ -1,5 +1,5 @@
 {% load static %}
-<span class="section-title">نظرات</span>
+<span class="section-title">گفتگو</span>
 <div class="section">
     <div class="project-comment-innerDiv">
         <div class="no-comment">
