--- a/static/expert/css/style.css
+++ b/static/expert/css/style.css
@@ -1260,10 +1260,31 @@ span.add-researcher.hover > span {
 
 .project-progress {
     width: 100%;
-    padding: 10px;
+    padding: 10px 10px 10px 0;
     text-align: center !important;
     position: relative;
-    display: flex;
+    display: block;
+    direction: rtl;
+}
+
+.project-progress:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 100%;
+    width: 1px;
+    height: 100%;
+    background-color: #C6CAC6;
+}
+
+@media (max-width: 992px) {
+    .project-progress {
+        display: flex;
+    }
+
+    .project-progress:after {
+        display: none;
+    }
 }
 
 @media (max-width: 767px) {
@@ -1274,10 +1295,15 @@ span.add-researcher.hover > span {
 
 .project-progress .step-container {
     position: relative;
-    width: 20%;
     display: flex;
     flex-direction: column;
     text-align: center;
+}
+
+@media (max-width: 992px) {
+    .project-progress .step-container {
+        width: 20%;
+    }
 }
 
 @media (max-width: 767px) {
@@ -1303,8 +1329,16 @@ span.add-researcher.hover > span {
     }
 }
 
-.project-progress .step-container:nth-child(odd) {
+.project-progress .step-container {
     flex-direction: column-reverse;
+    min-height: 120px;
+}
+
+@media (max-width: 992px) {
+    .project-progress .step-container:nth-child(even) {
+        flex-direction: unset;
+        min-height: 0;
+    }
 }
 
 @media (max-width: 767px) {
@@ -1323,8 +1357,26 @@ span.add-researcher.hover > span {
     color: #888;
 }
 
+@media (max-width: 992px) {
+    .project-progress .step-container span {
+        position: relative;
+        padding: 5px 10px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        border-radius: 5px;
+        font-weight: 400;
+        color: #888;
+    }
+}
+
 .project-progress .step-container span.step-date {
-    margin-bottom: 30px;
+    margin: 0 calc(50% + 15px) 0 0;
+}
+
+@media (max-width: 992px) {
+    .project-progress .step-container span.step-date {
+        margin-bottom: 30px;
+    }
 }
 
 @media (max-width: 767px) {
@@ -1337,6 +1389,12 @@ span.add-researcher.hover > span {
     color: #3CCD1C;
 }
 
+@media (max-width: 992px) {
+    .project-progress .step-container.active span.step-date {
+        color: #3CCD1C;
+    }
+}
+
 @media (max-width: 767px) {
     .project-progress .step-container.active span.step-date {
         color: #89E076;
@@ -1344,8 +1402,14 @@ span.add-researcher.hover > span {
 }
 
 .project-progress .step-container:nth-child(odd) span.step-date {
-    margin-top: 30px;
-    margin-bottom: 0;
+    margin: 0 0 0 calc(50% + 15px);
+}
+
+@media (max-width: 992px) {
+    .project-progress .step-container:nth-child(odd) span.step-date {
+        margin-top: 30px;
+        margin-bottom: 0;
+    }
 }
 
 @media (max-width: 767px) {
@@ -1358,15 +1422,15 @@ span.add-researcher.hover > span {
 .project-progress .step-container span.step-date:after {
     content: '';
     position: absolute;
-    height: 15px;
-    width: 15px;
-    left: 50%;
+    height: 16px;
+    width: 16px;
+    left: 0;
     top: 0;
     -webkit-transform: translate(-50%, calc(-50% - 16px));
     -moz-transform: translate(-50%, calc(-50% - 16px));
     -ms-transform: translate(-50%, calc(-50% - 16px));
     -o-transform: translate(-50%, calc(-50% - 16px));
-    transform: translate(-50%, calc(-50% - 16px));
+    transform: translate(-26px, calc(-50% - 16px));
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
@@ -1374,6 +1438,29 @@ span.add-researcher.hover > span {
     background-color: #ffffff;
     z-index: 9999;
 }
+
+@media (max-width: 992px) {
+    .project-progress .step-container span.step-date:after {
+        content: '';
+        position: absolute;
+        height: 15px;
+        width: 15px;
+        left: 50%;
+        top: 0;
+        -webkit-transform: translate(-50%, calc(-50% - 16px));
+        -moz-transform: translate(-50%, calc(-50% - 16px));
+        -ms-transform: translate(-50%, calc(-50% - 16px));
+        -o-transform: translate(-50%, calc(-50% - 16px));
+        transform: translate(-50%, calc(-50% - 16px));
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        border-radius: 50%;
+        border: 1px solid #3CCD1C;
+        background-color: #ffffff;
+        z-index: 9999;
+    }
+}
+
 
 @media (max-width: 767px) {
     .project-progress .step-container span.step-date:after {
@@ -1388,11 +1475,28 @@ span.add-researcher.hover > span {
 
 .project-progress .step-container:nth-child(even) span.step-date:after {
     top: 100%;
-    -webkit-transform: translate(-50%, calc(-50% + 16px));
-    -moz-transform: translate(-50%, calc(-50% + 16px));
-    -ms-transform: translate(-50%, calc(-50% + 16px));
-    -o-transform: translate(-50%, calc(-50% + 16px));
-    transform: translate(-50%, calc(-50% + 16px));
+    left: 100%;
+    -webkit-transform: translate(6px, calc(-50% + 16px));
+    -moz-transform: translate(6px, calc(-50% + 16px));
+    -ms-transform: translate(6px, calc(-50% + 16px));
+    -o-transform: translate(6px, calc(-50% + 16px));
+    transform: translate(6px, calc(-50% - 45px));
+}
+
+@media (max-width: 992px) {
+    .project-progress .step-container.active span.step-date:after {
+        border: 1px solid #ffffff;
+        background-color: #3CCD1C;
+    }
+
+    .project-progress .step-container:nth-child(even) span.step-date:after {
+        top: 100%;
+        -webkit-transform: translate(-50%, calc(-50% + 16px));
+        -moz-transform: translate(-50%, calc(-50% + 16px));
+        -ms-transform: translate(-50%, calc(-50% + 16px));
+        -o-transform: translate(-50%, calc(-50% + 16px));
+        transform: translate(-50%, calc(-50% + 16px));
+    }
 }
 
 @media (max-width: 767px) {
@@ -1405,9 +1509,21 @@ span.add-researcher.hover > span {
 .project-progress .step-container span.step-name {
     border: 1px solid #3CCD1C;
     background-color: #fff;
-    min-width: 100px;
-    width: fit-content;
-    margin: 0 auto;
+    margin: 0 0 0 calc(50% + 15px);
+}
+
+.project-progress .step-container:nth-child(even) span.step-name {
+    margin: 0 calc(50% + 15px) 0 0;
+}
+
+@media (max-width: 992px) {
+    .project-progress .step-container span.step-name {
+        border: 1px solid #3CCD1C;
+        background-color: #fff;
+        min-width: 100px;
+        width: fit-content;
+        margin: 0 auto;
+    }
 }
 
 @media (max-width: 767px) {
@@ -1422,9 +1538,16 @@ span.add-researcher.hover > span {
 }
 
 .project-progress .step-container.active span.step-name {
-    border: none;
     background-color: #3CCD1C;
     color: #ffffff;
+}
+
+@media (max-width: 992px) {
+    .project-progress .step-container.active span.step-name {
+        border: none;
+        background-color: #3CCD1C;
+        color: #ffffff;
+    }
 }
 
 @media (max-width: 767px) {
@@ -1439,15 +1562,54 @@ span.add-researcher.hover > span {
     height: 13px;
     width: 8px;
     border: 6px solid transparent;
-    border-top-color: #3CCD1C;
+    border-right-color: #3CCD1C;
     position: absolute;
     top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, calc(-50% + 22px));
-    -moz-transform: translate(-50%, calc(-50% + 22px));
-    -ms-transform: translate(-50%, calc(-50% + 22px));
-    -o-transform: translate(-50%, calc(-50% + 22px));
-    transform: translate(-50%, calc(-50% + 22px));
+    left: -13px;
+    -webkit-transform: translate(0, -50%);
+    -moz-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    -o-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+}
+
+.project-progress .step-container:not(.active) span.step-name:before {
+    content: '';
+    height: 13px;
+    width: 8px;
+    border: 6px solid transparent;
+    border-right-color: #ffffff;
+    position: absolute;
+    top: 50%;
+    left: -13px;
+    -webkit-transform: translate(0, -50%);
+    -moz-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    -o-transform: translate(0, -50%);
+    transform: translate(1px, -50%);
+    z-index: 1;
+}
+
+@media (max-width: 992px) {
+    .project-progress .step-container span.step-name:after {
+        content: '';
+        height: 13px;
+        width: 8px;
+        border: 6px solid transparent;
+        border-top-color: #3CCD1C;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translate(-50%, calc(-50% + 22px));
+        -moz-transform: translate(-50%, calc(-50% + 22px));
+        -ms-transform: translate(-50%, calc(-50% + 22px));
+        -o-transform: translate(-50%, calc(-50% + 22px));
+        transform: translate(-50%, calc(-50% + 22px));
+    }
+
+    .project-progress .step-container span.step-name:before {
+        display: none;
+    }
 }
 
 @media (max-width: 767px) {
@@ -1457,11 +1619,11 @@ span.add-researcher.hover > span {
 }
 
 .project-progress .step-container.active span.step-name:after {
-    -webkit-transform: translate(-50%, calc(-50% + 20px));
-    -moz-transform: translate(-50%, calc(-50% + 20px));
-    -ms-transform: translate(-50%, calc(-50% + 20px));
-    -o-transform: translate(-50%, calc(-50% + 20px));
-    transform: translate(-50%, calc(-50% + 20px));
+    -webkit-transform: translate(0, -50%);
+    -moz-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    -o-transform: translate(0, -50%);
+    transform: translate(0, -50%);
 }
 
 .project-progress .step-container:nth-child(even) span.step-name:after {
@@ -1469,12 +1631,48 @@ span.add-researcher.hover > span {
     height: 13px;
     width: 8px;
     border: 6px solid transparent;
-    border-bottom-color: #3CCD1C;
+    border-left-color: #3CCD1C;
     position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, calc(-50% - 22px));
+    left: 100%;
+    transform: translate(0, -50%);
 }
+
+.project-progress .step-container:not(.active):nth-child(even) span.step-name:before {
+    border: 6px solid transparent;
+    border-left-color: #ffffff;
+    top: 50%;
+    left: 100%;
+    -webkit-transform: translate(-1px, -50%);
+    -moz-transform: translate(-1px, -50%);
+    -ms-transform: translate(-1px, -50%);
+    -o-transform: translate(-1px, -50%);
+    transform: translate(-1px, -50%);
+    z-index: 1;
+}
+
+@media (max-width: 992px) {
+    .project-progress .step-container.active span.step-name:after {
+        -webkit-transform: translate(-50%, calc(-50% + 20px));
+        -moz-transform: translate(-50%, calc(-50% + 20px));
+        -ms-transform: translate(-50%, calc(-50% + 20px));
+        -o-transform: translate(-50%, calc(-50% + 20px));
+        transform: translate(-50%, calc(-50% + 20px));
+    }
+
+    .project-progress .step-container:nth-child(even) span.step-name:after {
+        content: '';
+        height: 13px;
+        width: 8px;
+        border: 6px solid transparent;
+        border-bottom-color: #3CCD1C;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, calc(-50% - 22px));
+    }
+}
+
 
 @media (max-width: 767px) {
     .project-progress .step-container:nth-child(even) span.step-name:after {
@@ -1483,11 +1681,21 @@ span.add-researcher.hover > span {
 }
 
 .project-progress .step-container:nth-child(even).active span.step-name:after {
-    -webkit-transform: translate(-50%, calc(-50% - 20px));
-    -moz-transform: translate(-50%, calc(-50% - 20px));
-    -ms-transform: translate(-50%, calc(-50% - 20px));
-    -o-transform: translate(-50%, calc(-50% - 20px));
-    transform: translate(-50%, calc(-50% - 20px));
+    -webkit-transform: translate(0, -50%);
+    -moz-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    -o-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+}
+
+@media (max-width: 992px) {
+    .project-progress .step-container:nth-child(even).active span.step-name:after {
+        -webkit-transform: translate(-50%, calc(-50% - 20px));
+        -moz-transform: translate(-50%, calc(-50% - 20px));
+        -ms-transform: translate(-50%, calc(-50% - 20px));
+        -o-transform: translate(-50%, calc(-50% - 20px));
+        transform: translate(-50%, calc(-50% - 20px));
+    }
 }
 
 /*.step-top {*/
@@ -1544,17 +1752,31 @@ span.add-researcher.hover > span {
 
 .line-100 {
     position: absolute;
-    height: 4px;
-    width: 100%;
-    top: 50%;
-    left: 0;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    transform: translateY(-50%);
+    height: 100%;
+    width: 4px;
+    left: 50%;
+    top: 0;
+    -webkit-transform: translate(-10px, 0);
+    -moz-transform: translate(-10px, 0);
+    -ms-transform: translate(-10px, 0);
+    -o-transform: translate(-10px, 0);
+    transform: translate(-10px, 0);
     background-color: #B0E9A4;
     z-index: 1;
+}
+
+@media (max-width: 992px) {
+    .line-100 {
+        height: 4px;
+        width: 100%;
+        top: 50%;
+        left: 0;
+        -webkit-transform: translateY(-50%);
+        -moz-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        -o-transform: translateY(-50%);
+        transform: translateY(-50%);
+    }
 }
 
 @media (max-width: 767px) {
@@ -1563,50 +1785,92 @@ span.add-researcher.hover > span {
     }
 }
 
+.line-100 > .arrow {
+    position: absolute;
+    bottom: -15px;
+    left: -8px;
+    height: 15px;
+    width: 15px;
+    border: 10px solid transparent;
+    border-top-color: #3CCD1C;
+}
+
 .project-progress .line-100:after {
     content: '';
     position: absolute;
-    height: 4px;
-    width: 0;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    transform: translateY(-50%);
-    right: 0;
+    width: 4px;
+    height: 0;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    transform: translateX(-50%);
+    top: 0;
     background-color: #3CCD1C;
 }
 
 .project-progress.step-1 .line-100:after {
-    width: 10%;
+    height: 10%;
 }
 
 .project-progress.step-2 .line-100:after {
-    width: 30%;
+    height: 30%;
 }
 
 .project-progress.step-3 .line-100:after {
-    width: 50%;
+    height: 50%;
 }
 
 .project-progress.step-4 .line-100:after {
-    width: 70%;
+    height: 70%;
 }
 
 .project-progress.step-5 .line-100:after {
-    width: 98%;
+    height: 98%;
 }
 
-.line-100 > .arrow {
-    position: absolute;
-    top: -8px;
-    left: 0;
-    height: 15px;
-    width: 15px;
-    border: 10px solid #ffffff;
-    border-right-color: #3CCD1C;
+@media (max-width: 992px) {
+    .project-progress .line-100:after {
+        height: 4px;
+        width: 0;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+        -moz-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        -o-transform: translateY(-50%);
+        transform: translateY(-50%);
+        right: 0;
+    }
+
+    .project-progress.step-1 .line-100:after {
+        width: 10%;
+    }
+
+    .project-progress.step-2 .line-100:after {
+        width: 30%;
+    }
+
+    .project-progress.step-3 .line-100:after {
+        width: 50%;
+    }
+
+    .project-progress.step-4 .line-100:after {
+        width: 70%;
+    }
+
+    .project-progress.step-5 .line-100:after {
+        width: 98%;
+    }
+
+    .line-100 > .arrow {
+        top: -8px;
+        left: 0;
+        border-top-color: #F8FDF7;
+        border-right-color: #3CCD1C;
+    }
 }
+
 
 @media (max-width: 767px) {
     .line-100 > .arrow {
@@ -1906,7 +2170,8 @@ div.researcher-info-innerDiv {
         margin: 60px 11px 0;
         text-align: center;
     }
-    .researcher-personal-info > .information .border-span{
+
+    .researcher-personal-info > .information .border-span {
         background-color: #f7fdf8;
     }
 }
