--- a/expert/templates/expert/layouts/researcher_info_dialog.html
+++ b/expert/templates/expert/layouts/researcher_info_dialog.html
@@ -1,105 +1,217 @@
 {% load static %}
-<div class="fixed-back researcher-info-dialog">
-    <div class="card p-bottom-0 text-right large side-card">
-        <div class="close"></div>
-        <div class="card-head"></div>
-        <div class="card-side has-image">
-            <div class="researcher-personal-info">
-                <div class="researcher-profile">
-                    <img src="" alt="profile-img" id="researcher_photo">
+<div class="modal fade" id="researcherInfo" tabindex="-1" role="dialog" aria-labelledby="researcherInfoLabel"
+     aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h6 class="modal-title text-right" id="researcherInfoLabel">رزومه پژوهشگر</h6>
+                <button type="button" class="close close__redirect" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="card-side has-image">
+                    <div class="user-personal-info">
+                        <div class="researcher-profile">
+                            <img src="" alt="profile-img" id="researcher_photo">
+                        </div>
+                        <div class="information">
+                            <h6 id="researcher_name"></h6>
+                            <div id="researcher_techniques"></div>
+                        </div>
+                    </div>
                 </div>
-                <div class="information">
-                    <h6 id="researcher_name"></h6>
-                    <div id="researcher_techniques"></div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="row mbottom-lg-25" id="whole-education-info">
+                                <div class="col-lg-12 text-right">
+                                    <span class="section-title">سوابق علمی</span>
+                                    <div class="section no-border">
+                                        <div class="education-info-innerDiv">
+                                            <table class="table text-center">
+                                                <thead>
+                                                <tr>
+                                                    <td scope="col">رشته تحصیلی</td>
+                                                    <td scope="col">مقطع تحصیلی</td>
+                                                    <td scope="col">دانشگاه</td>
+                                                    <td scope="col">شهر</td>
+                                                    <td scope="col">سال ورود</td>
+                                                </tr>
+                                                </thead>
+                                                <tbody id="researcher_scientific_record">
+                                                <tr>
+                                                </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mbottom-lg-25" id="whole-project-info">
+                                <div class="col-lg-12 text-right">
+                                    <span class="section-title">سوابق اجرایی</span>
+                                    <div class="section no-border">
+                                        <div class="education-info-innerDiv">
+                                            <table class="table text-center">
+                                                <thead>
+                                                <tr>
+                                                    <td scope="col" rowspan="2">سمت</td>
+                                                    <td scope="col" rowspan="2">محل خدمت</td>
+                                                    <td scope="col" rowspan="2">شهر</td>
+                                                    <td scope="col" colspan="2">تاریخ</td>
+                                                </tr>
+                                                <tr>
+                                                    <td scope="col">شروع</td>
+                                                    <td scope="col">اتمام</td>
+                                                </tr>
+                                                </thead>
+                                                <tbody id="researcher_executive_record">
+                                                <tr>
+                                                </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mbottom-lg-25" id="whole-executive-info">
+                                <div class="col-lg-12 text-right">
+                                    <span class="section-title">سوابق پژوهشی</span>
+                                    <div class="section no-border">
+                                        <div class="education-info-innerDiv">
+                                            <table class="table text-center">
+                                                <thead>
+                                                <tr>
+                                                    <td scope="col">عنوان طرح پژوهشی</td>
+                                                    <td scope="col">نام مجری</td>
+                                                    <td scope="col">مسئول اجرا/همکار</td>
+                                                    <td scope="col">وضعیت طرح پژوهشی</td>
+                                                </tr>
+                                                </thead>
+                                                <tbody id="researcher_research_record">
+                                                <tr>
+                                                </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mbottom-lg-25">
+                                <div class="col-lg-12 text-right">
+                                    <div class="status" status="researcher">
+                                        {% include 'expert/layouts/comment.html' %}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="row mbottom-lg-25" id="whole-education-info">
-                        <div class="col-lg-12 text-right">
-                            <span class="section-title">سوابق علمی</span>
-                            <div class="section no-border">
-                                <div class="education-info-innerDiv">
-                                    <table class="table text-center">
-                                        <thead>
-                                        <tr>
-                                            <td scope="col">رشته تحصیلی</td>
-                                            <td scope="col">مقطع تحصیلی</td>
-                                            <td scope="col">دانشگاه</td>
-                                            <td scope="col">شهر</td>
-                                            <td scope="col">سال ورود</td>
-                                        </tr>
-                                        </thead>
-                                        <tbody id="researcher_scientific_record">
-                                        <tr>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row mbottom-lg-25" id="whole-project-info">
-                        <div class="col-lg-12 text-right">
-                            <span class="section-title">سوابق اجرایی</span>
-                            <div class="section no-border">
-                                <div class="education-info-innerDiv">
-                                    <table class="table text-center">
-                                        <thead>
-                                        <tr>
-                                            <td scope="col" rowspan="2">سمت</td>
-                                            <td scope="col" rowspan="2">محل خدمت</td>
-                                            <td scope="col" rowspan="2">شهر</td>
-                                            <td scope="col" colspan="2">تاریخ</td>
-                                        </tr>
-                                        <tr>
-                                            <td scope="col">شروع</td>
-                                            <td scope="col">اتمام</td>
-                                        </tr>
-                                        </thead>
-                                        <tbody id="researcher_executive_record">
-                                        <tr>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row mbottom-lg-25" id="whole-executive-info">
-                        <div class="col-lg-12 text-right">
-                            <span class="section-title">سوابق پژوهشی</span>
-                            <div class="section no-border">
-                                <div class="education-info-innerDiv">
-                                    <table class="table text-center">
-                                        <thead>
-                                        <tr>
-                                            <td scope="col">عنوان طرح پژوهشی</td>
-                                            <td scope="col">نام مجری</td>
-                                            <td scope="col">مسئول اجرا/همکار</td>
-                                            <td scope="col">وضعیت طرح پژوهشی</td>
-                                        </tr>
-                                        </thead>
-                                        <tbody id="researcher_research_record">
-                                        <tr>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row mbottom-lg-25">
-                        <div class="col-lg-12 text-right">
-                            <div class="status" status="researcher">
-                                {% include 'expert/layouts/comment.html' %}
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div class="modal-footer"></div>
         </div>
     </div>
 </div>
+{#<div class="fixed-back researcher-info-dialog">#}
+{#    <div class="card p-bottom-0 text-right large side-card">#}
+{#        <div class="close"></div>#}
+{#        <div class="card-head"></div>#}
+{#        <div class="card-side has-image">#}
+{#            <div class="researcher-personal-info">#}
+{#                <div class="researcher-profile">#}
+{#                    <img src="" alt="profile-img" id="researcher_photo">#}
+{#                </div>#}
+{#                <div class="information">#}
+{#                    <h6 id="researcher_name"></h6>#}
+{#                    <div id="researcher_techniques"></div>#}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
+{#        <div class="container">#}
+{#            <div class="row">#}
+{#                <div class="col-lg-12">#}
+{#                    <div class="row mbottom-lg-25" id="whole-education-info">#}
+{#                        <div class="col-lg-12 text-right">#}
+{#                            <span class="section-title">سوابق علمی</span>#}
+{#                            <div class="section no-border">#}
+{#                                <div class="education-info-innerDiv">#}
+{#                                    <table class="table text-center">#}
+{#                                        <thead>#}
+{#                                        <tr>#}
+{#                                            <td scope="col">رشته تحصیلی</td>#}
+{#                                            <td scope="col">مقطع تحصیلی</td>#}
+{#                                            <td scope="col">دانشگاه</td>#}
+{#                                            <td scope="col">شهر</td>#}
+{#                                            <td scope="col">سال ورود</td>#}
+{#                                        </tr>#}
+{#                                        </thead>#}
+{#                                        <tbody id="researcher_scientific_record">#}
+{#                                        <tr>#}
+{#                                        </tr>#}
+{#                                        </tbody>#}
+{#                                    </table>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                    <div class="row mbottom-lg-25" id="whole-project-info">#}
+{#                        <div class="col-lg-12 text-right">#}
+{#                            <span class="section-title">سوابق اجرایی</span>#}
+{#                            <div class="section no-border">#}
+{#                                <div class="education-info-innerDiv">#}
+{#                                    <table class="table text-center">#}
+{#                                        <thead>#}
+{#                                        <tr>#}
+{#                                            <td scope="col" rowspan="2">سمت</td>#}
+{#                                            <td scope="col" rowspan="2">محل خدمت</td>#}
+{#                                            <td scope="col" rowspan="2">شهر</td>#}
+{#                                            <td scope="col" colspan="2">تاریخ</td>#}
+{#                                        </tr>#}
+{#                                        <tr>#}
+{#                                            <td scope="col">شروع</td>#}
+{#                                            <td scope="col">اتمام</td>#}
+{#                                        </tr>#}
+{#                                        </thead>#}
+{#                                        <tbody id="researcher_executive_record">#}
+{#                                        <tr>#}
+{#                                        </tr>#}
+{#                                        </tbody>#}
+{#                                    </table>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                    <div class="row mbottom-lg-25" id="whole-executive-info">#}
+{#                        <div class="col-lg-12 text-right">#}
+{#                            <span class="section-title">سوابق پژوهشی</span>#}
+{#                            <div class="section no-border">#}
+{#                                <div class="education-info-innerDiv">#}
+{#                                    <table class="table text-center">#}
+{#                                        <thead>#}
+{#                                        <tr>#}
+{#                                            <td scope="col">عنوان طرح پژوهشی</td>#}
+{#                                            <td scope="col">نام مجری</td>#}
+{#                                            <td scope="col">مسئول اجرا/همکار</td>#}
+{#                                            <td scope="col">وضعیت طرح پژوهشی</td>#}
+{#                                        </tr>#}
+{#                                        </thead>#}
+{#                                        <tbody id="researcher_research_record">#}
+{#                                        <tr>#}
+{#                                        </tr>#}
+{#                                        </tbody>#}
+{#                                    </table>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                    <div class="row mbottom-lg-25">#}
+{#                        <div class="col-lg-12 text-right">#}
+{#                            <div class="status" status="researcher">#}
+{#                                {% include 'expert/layouts/comment.html' %}#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
+{#</div>#}
