--- a/expert/templates/expert/researcherRequest.html
+++ b/expert/templates/expert/researcherRequest.html
@@ -79,14 +79,14 @@
                                             {#                                                   <button class="show-researcher">مشاهده</button>#}
                                             {#                                                   <button class="accept-researcher">تایید</button>#}
                                             {#                                                   <button class="refuse-researcher">رد</button>#}
-{#                                            <button class="researcher-card-button-show" value="{{ project.id }}"#}
-{#                                                    id="{{ researcher.profile.researcher_user.id }}"#}
-{#                                                    data-url="{% url 'expert:show_researcher_preview' %}">مشاهده#}
-{#                                            </button>#}
-{#                                            <button class="researcher-card-button-check confirm-researcher"#}
-{#                                                    id="{{ researcher.profile.id }}">تایید#}
-{#                                            </button>#}
-{#                                            <div class="close"></div>#}
+                                            {#                                            <button class="researcher-card-button-show" value="{{ project.id }}"#}
+                                            {#                                                    id="{{ researcher.profile.researcher_user.id }}"#}
+                                            {#                                                    data-url="{% url 'expert:show_researcher_preview' %}">مشاهده#}
+                                            {#                                            </button>#}
+                                            {#                                            <button class="researcher-card-button-check confirm-researcher"#}
+                                            {#                                                    id="{{ researcher.profile.id }}">تایید#}
+                                            {#                                            </button>#}
+                                            {#                                            <div class="close"></div>#}
                                         </div>
                                     </div>
                                 </div>
@@ -102,27 +102,35 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-12 text-left">
-                                        <button class="default-btn researcher-card-button-show" value="{{ project.id }}"
-                                                id="{{ researcher.profile.id }}"
-                                                data-url="{% url 'expert:show_researcher_preview' %}">مشاهده
-                                        </button>
+                                    <div class="col-12">
+                                        {% if not researcher.accepted and not researcher.refused %}
+                                            <div class="row mbottom-10">
+                                                <div class="col-6 text-left">
+                                                    <button class="border-button confirm-researcher"
+                                                            id="{{ researcher.id }}" value="{{ project.id }}">تایید
+                                                    </button>
+                                                </div>
+                                                <div class="col-6 text-right">
+                                                    <button class="border-button fail-button refuse-researcher"
+                                                            id="{{ researcher.id }}" value="{{ project.id }}">رد
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        {% endif %}
+                                        <div class="row">
+                                            <div class="col-12 text-center">
+                                                <button class="default-btn researcher-card-button-show"
+                                                        value="{{ project.id }}"
+                                                        id="{{ researcher.profile.id }}"
+                                                        data-url="{% url 'expert:show_researcher_preview' %}"
+                                                        data-toggle="modal" data-target="#researcherInfo">
+                                                    مشاهده رزومه
+                                                </button>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                                {% if not researcher.accepted and not researcher.refused %}
-                                    <div class="row">
-                                        <div class="col-6 text-left">
-                                            <button class="border-button confirm-researcher"
-                                                    id="{{ researcher.id }}" value="{{project.id}}">تایید
-                                            </button>
-                                        </div>
-                                        <div class="col-6 text-right">
-                                            <button class="border-button refuse-researcher"
-                                                    id="{{ researcher.id }}" value="{{project.id}}">رد
-                                            </button>
-                                        </div>
-                                    </div>
-                                {% endif %}
+
                             </div>
                         </div>
                     </div>
