--- a/researcher/templates/researcher/layouts/showProject.html
+++ b/researcher/templates/researcher/layouts/showProject.html
@@ -1,103 +1,188 @@
 {% load static %}
-<div class="fixed-back showProject">
-    <div class="card text-right stick-footer b-x0">
-        <div class="close"></div>
-        <div class="card-head">عنوان پروژه</div>
-        <div class="vote">
-            <span class="dots"></span>
-        </div>
-        <div class="vote-dialog">
-            <div class="card expert-back text-center">ارزیابی از استاد</div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 keywords"></div>
+<div class="modal fade" id="showProject" tabindex="-1" role="dialog" aria-labelledby="showProjectLabel"
+     aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h6 class="modal-title text-right" id="showProjectLabel"></h6>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="row">
-                <div class="col-6"></div>
-                <div class="col-6 text-left">
+            <div class="modal-body">
+                <div class="container text-right">
                     <div class="row">
-                        <div class="col-6">
-                            <div class="establish-time">
-                                <div class="time-head">ثبت</div>
-                                <div class="time-body">تاریخ ثبت</div>
+                        <div class="col-lg-12 keywords"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6"></div>
+                        <div class="col-6 text-left">
+                            <div class="row">
+                                <div class="col-6">
+                                    <div class="establish-time">
+                                        <div class="time-head">ثبت</div>
+                                        <div class="time-body">تاریخ ثبت</div>
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="time-left">
+                                        <div class="time-head">مهلت</div>
+                                        <div class="time-body">مهلت</div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-6">
-                            <div class="time-left">
-                                <div class="time-head">مهلت</div>
-                                <div class="time-body">مهلت</div>
+                    </div>
+                    <div class="row mbottom-lg-25">
+                        <div class="col-lg-12 text-right">
+                            <span class="section-title">اطلاعات پروژه</span>
+                            <div class="project-info-tabs">
+                                <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
+                                     aria-orientation="vertical">
+                                    <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill"
+                                       role="tab" aria-controls="v-pills-home"
+                                       aria-selected="true">
+                                        شاخص ها
+                                    </a>
+                                    <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill"
+                                       role="tab" aria-controls="v-pills-profile"
+                                       aria-selected="false">
+                                        راهکار ها
+                                    </a>
+                                    <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill"
+                                       role="tab" aria-controls="v-pills-messages"
+                                       aria-selected="false">
+                                        منابع مورد نیاز
+                                    </a>
+                                    <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill"
+                                       role="tab" aria-controls="v-pills-settings"
+                                       aria-selected="false">
+                                        قوانین
+                                    </a>
+                                </div>
                             </div>
+                            <div class="section" style="border: none">
+                                <div class="project-info-innerDiv">
+                                    <div class="project-info-content">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row comments-diolag">
+                        <div class="col-lg-12 text-right">
+                            {% include 'researcher/layouts/comment.html' %}
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row mbottom-lg-25">
-                <div class="col-lg-12 text-right">
-                    <span class="section-title">اطلاعات پروژه</span>
-                    <div class="project-info-tabs">
-                        <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
-                             aria-orientation="vertical">
-                            <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill"
-                               role="tab" aria-controls="v-pills-home"
-                               aria-selected="true">
-                                شاخص ها
-                            </a>
-                            <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill"
-                               role="tab" aria-controls="v-pills-profile"
-                               aria-selected="false">
-                                راهکار ها
-                            </a>
-                            <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill"
-                               role="tab" aria-controls="v-pills-messages"
-                               aria-selected="false">
-                                منابع مورد نیاز
-                            </a>
-                            <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill"
-                               role="tab" aria-controls="v-pills-settings"
-                               aria-selected="false">
-                                قوانین
-                            </a>
-                        </div>
-                    </div>
-                    <div class="section" style="border: none">
-                        <div class="project-info-innerDiv">
-                            <div class="project-info-content">
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="modal-footer">
+                <button class="btn btn-primary confirm_project" id="accept-project">
+                    ارسال درخواست انجام پروژه
+                </button>
             </div>
-            <div class="apply">
-                <form method="POST" url="{% url 'researcher:apply_project' %}" class="apply_Project">
-                    {% csrf_token %}
-                    <div class="row">
-                        <input type="text" id="apply_project_id" name="id" hidden>
-                        <div class="col-lg-6">
-                            حداقل ساعت: <input type="text" name="least_hours" id="least_hours">
-                        </div>
-                        <div class="col-lg-6">
-                            حداکثر ساعت: <input type="text" name="most_hours" id="most_hours">
-                        </div>
-                    </div>
-                    <br>
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <button type="submit" class="w-100 accept-btn btn">ارسال درخواست انجام پروژه</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <div class="row comments-diolag">
-                <div class="col-lg-12 text-right">
-                    {% include 'researcher/layouts/comment.html' %}
-                </div>
-            </div>
-            {# <div class="card-footer">#}
-            {#    <button class="save-btn confirm_project" id="accept-project">#}
-            {#        ارسال درخواست انجام پروژه#}
-            {#    </button>#}
-            {#</div> -->#}
         </div>
     </div>
 </div>
+
+{#<div class="fixed-back showProject">#}
+{#    <div class="card text-right stick-footer b-x0">#}
+{#        <div class="close"></div>#}
+{#        <div class="card-head">عنوان پروژه</div>#}
+{#        <div class="vote">#}
+{#            <span class="dots"></span>#}
+{#        </div>#}
+{#        <div class="vote-dialog">#}
+{#            <div class="card expert-back text-center">ارزیابی از استاد</div>#}
+{#        </div>#}
+{#        <div class="container">#}
+{#            <div class="row">#}
+{#                <div class="col-lg-12 keywords"></div>#}
+{#            </div>#}
+{#            <div class="row">#}
+{#                <div class="col-6"></div>#}
+{#                <div class="col-6 text-left">#}
+{#                    <div class="row">#}
+{#                        <div class="col-6">#}
+{#                            <div class="establish-time">#}
+{#                                <div class="time-head">ثبت</div>#}
+{#                                <div class="time-body">تاریخ ثبت</div>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                        <div class="col-6">#}
+{#                            <div class="time-left">#}
+{#                                <div class="time-head">مهلت</div>#}
+{#                                <div class="time-body">مهلت</div>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#            <div class="row mbottom-lg-25">#}
+{#                <div class="col-lg-12 text-right">#}
+{#                    <span class="section-title">اطلاعات پروژه</span>#}
+{#                    <div class="project-info-tabs">#}
+{#                        <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"#}
+{#                             aria-orientation="vertical">#}
+{#                            <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill"#}
+{#                               role="tab" aria-controls="v-pills-home"#}
+{#                               aria-selected="true">#}
+{#                                شاخص ها#}
+{#                            </a>#}
+{#                            <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill"#}
+{#                               role="tab" aria-controls="v-pills-profile"#}
+{#                               aria-selected="false">#}
+{#                                راهکار ها#}
+{#                            </a>#}
+{#                            <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill"#}
+{#                               role="tab" aria-controls="v-pills-messages"#}
+{#                               aria-selected="false">#}
+{#                                منابع مورد نیاز#}
+{#                            </a>#}
+{#                            <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill"#}
+{#                               role="tab" aria-controls="v-pills-settings"#}
+{#                               aria-selected="false">#}
+{#                                قوانین#}
+{#                            </a>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                    <div class="section" style="border: none">#}
+{#                        <div class="project-info-innerDiv">#}
+{#                            <div class="project-info-content">#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#            <div class="apply">#}
+{#                <form method="POST" url="{% url 'researcher:apply_project' %}" class="apply_Project">#}
+{#                    {% csrf_token %}#}
+{#                    <div class="row">#}
+{#                        <input type="text" id="apply_project_id" name="id" hidden>#}
+{#                        <div class="col-lg-6">#}
+{#                            حداقل ساعت: <input type="text" name="least_hours" id="least_hours">#}
+{#                        </div>#}
+{#                        <div class="col-lg-6">#}
+{#                            حداکثر ساعت: <input type="text" name="most_hours" id="most_hours">#}
+{#                        </div>#}
+{#                    </div>#}
+{#                    <br>#}
+{#                    <div class="row">#}
+{#                        <div class="col-lg-12">#}
+{#                            <button type="submit" class="w-100 accept-btn btn">ارسال درخواست انجام پروژه</button>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </form>#}
+{#            </div>#}
+{#            <div class="row comments-diolag">#}
+{#                <div class="col-lg-12 text-right">#}
+{#                    {% include 'researcher/layouts/comment.html' %}#}
+{#                </div>#}
+{#            </div>#}
+{#            <div class="card-footer">#}
+{#                <button class="save-btn confirm_project" id="accept-project">#}
+{#                    ارسال درخواست انجام پروژه#}
+{#                </button>#}
+{#            </div>#}
+{#            -->#}
+{#        </div>#}
+{#    </div>#}
+{#</div>#}
