fix expert UserInfo

--- a/expert/templates/expert/layouts/initial_information.html
+++ b/expert/templates/expert/layouts/initial_information.html
@@ -18,14 +18,14 @@
                         <div class="col-md-3"></div>
                         <div class="col-md-5">
                             <div class="form-group">
-                                <label for="FirstName">نام و نام خانوادگی</label>
-                                {% if form.first_name.errors %}
-                                    {{ form.first_name|attr:"id:FirstName"|attr:"class:error w-100" }}
+                                <label for="FullName">نام و نام خانوادگی</label>
+                                {% if form.fullname.errors %}
+                                    {{ form.fullname|attr:"id:FullName"|attr:"class:error w-100" }}
                                 {% else %}
-                                    {{ form.first_name|attr:"id:FirstName"|attr:"class:w-100" }}
+                                    {{ form.fullname|attr:"id:FullName"|attr:"class:w-100" }}
                                 {% endif %}
                                 <div class="error">
-                                    <span class="error-body">{% render_field form.first_name.errors %}</span>
+                                    <span class="error-body">{% render_field form.fullname.errors %}</span>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -169,10 +169,10 @@
                         </div>
                         <div class="col-md-4"></div>
                     </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">ثبت تغییرات</button>
+                    </div>
                 </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary">ثبت تغییرات</button>
             </div>
         </div>
     </div>
@@ -206,14 +206,14 @@
 {#                <div class="row">#}
 {#                    <div class="col-md-6">#}
 {#for adding error add class "error" to input or textarea then add following div after that#}
-{#                        <label for="FirstName">نام</label>#}
-{#                        {% if form.first_name.errors %}#}
-{#                            {{ form.first_name|attr:"id:FirstName"|attr:"class:error w-100" }}#}
+{#                        <label for="FullName">نام</label>#}
+{#                        {% if form.fullname.errors %}#}
+{#                            {{ form.fullname|attr:"id:FullName"|attr:"class:error w-100" }}#}
 {#                        {% else %}#}
-{#                            {{ form.first_name|attr:"id:FirstName"|attr:"class:w-100" }}#}
+{#                            {{ form.fullname|attr:"id:FullName"|attr:"class:w-100" }}#}
 {#                        {% endif %}#}
 {#                        <div class="error">#}
-{#                            <span class="error-body">{% render_field form.first_name.errors %}</span>#}
+{#                            <span class="error-body">{% render_field form.fullname.errors %}</span>#}
 {#                        </div>#}
 {#                    </div>#}
 {#                    <div class="col-md-6">#}
