fix captcha errors

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -80,6 +80,7 @@
 {#                            <label for="id_captcha_1">کد کپچا</label>#}
                             {{ register_form.captcha | attr:"class:w-100"| attr:"placeholder:کد را وارد کنید"}}
                         </div>
+                        <div class="captcha-error"></div>
                         <button type="submit" name="sign_up" class="Enter-btn">عضویت</button>
                         <hr>
                         <div class="prev-slide">
